# terrain-maker_v2

./: .claude-current-status  .claude-current-status-dijkstra  .coverage  .env.example  .gitignore  1  AGENTS.md  CLAUDE.md  CLEANUP.md  LEARNINGS.md  README.md  environment.yml  eslint.config.mjs  flow-spec.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  test_arrowheads.py  test_expansion_performance.py  test_real_flow_arrows.py
.claude/agents/: python-docs-auditor.md
.claude/commands/: commit.md  docs-explain.md  docs.md  hygiene.md  learn.md  maintainability.md  monitor.md  next.md  push.md  reflect.md  retrospective.md  session-history.md  tdd.md  todo.md
.claude/learnings/: 2025-11.md  2025-12.md  2026-01.md
.github/workflows/: README.md  docs.yml
data/: worldclim_30s
data/samples/: 1_to_5_hr_drive_times.geojson  Detroit_1hr_to_5hr_drive_time.geojson  Detroit_5hr_drive_time.geojson
docs/: AGENT_PATTERNS.md  API_REFERENCE.md  API_SETUP.md  AUDIT_BACKGROUND_PLANE_2025-12-18.md  BEST_PRACTICES.md  CACHING.md  CLAUDE_PATTERNS.md  COMBINED_RENDER.md  COMMAND_CATALOG.md  DEAL_BREAKER_ANALYSIS.md  DEAL_BREAKER_UPDATE.md  DETROIT_ELEVATION.md  DUAL_RENDER.md  EXAMPLES.md  FEATURE_CHECK.md  PYTHON_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  SCORING_CONFIG.md  SELF_UPDATING.md  SNOW_SLEDDING.md  SRTM_DOWNLOAD_GUIDE.md  TDD_SUCCESS_STORIES.md  TDD_WITH_CLAUDE.md  TOKEN_EFFICIENCY.md  XC_SKIING.md  XC_SKIING_SCORING_UPDATE.md  _config.yml  design-spec.md  index.md
docs/plans/: BACKGROUND_PLANE_FEATURE.md
docs/source/: changelog.md  conf.py  gallery.md  index.rst  installation.md  quickstart.md
examples/: FLOW_TESTING_GUIDE.md  PERFORMANCE_NOTES.md  USING_REAL_WATER_BODY_DATA.md  WATER_BODIES_VALIDATION.md  check_numba_threading.py  debug_breach_failure.py  debug_water_detection.py  detroit_combined_render.py  detroit_dual_render.py  detroit_elevation_real.py  detroit_pipeline.py  detroit_roads.py  detroit_snow_depth_poc.py  detroit_snow_sledding.py  detroit_two_tier_edge.py  detroit_xc_skiing.py  diagnose_flow_outlets.py  diagnose_flow_parameters.py  diagnose_lake_boundaries.py  diagnose_lake_connections.py  diagnose_snodas_coverage.py  diagnose_spillway_drainage.py  download_san_diego_dem.py  download_single_tile_test.py  plot_rainfall.py  plot_san_diego_rainfall_30s.py  quick_flow_test.py  render_blend.py  san_diego_demo.py  san_diego_flow_demo.py  score_loaders.py  snow_analysis_pipeline_example.py  temporal_sculpture.py  test_drainage_area_verification.py  test_flat_resolution.py  test_flow_fix.py  validate_flow_complete.py  validate_flow_fixed.py  validate_flow_individual.py  validate_flow_paths.py  (+8 more)
examples/output/: OOM-log.txt  (+2 more)
scripts/: colormap_design.py  generate-docs-images.sh  python-docs.py  test_height_scales.sh  todo-github.js
session-history/: .last-save
site/: 404.html  index.html
src/: config.py
test/: feature-check.test.js
tests/: conftest.py  test_advanced_viz.py  test_background_plane.py  test_basic.py  test_blender_integration.py  test_boundary_extension_coverage.py  test_bounds_pipeline.py  test_bounds_visualization_real_detroit.py  test_camera_positioning.py  test_camera_projection.py  test_color_application.py  test_color_mapping.py  test_component_panels.py  test_config.py  test_data_loading.py  test_dem_cache.py  test_dem_downloader.py  test_detroit_dual_render.py  test_detroit_example.py  test_detroit_snow_example.py  test_diagnostics.py  test_edge_extrusion_debug.py  test_edge_extrusion_faces.py  test_flow_accumulation.py  test_flow_performance.py  test_gpu_integration.py  test_gpu_ops.py  test_gridded_data_tiling.py  test_iterative_breaching.py  test_line_layer_expansion.py  test_line_layers.py  test_load_snodas_stats.py  test_materials.py  test_mesh_cache.py  test_mesh_operations.py  test_overlay_threshold_mask.py  test_pipeline.py  test_pipeline_cache.py  test_precipitation_downloader.py  test_rendering.py  (+24 more)
(+118 files in other folders)
