[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terrain-maker"
version = "2.0.0"
description = "GeoTIFF terrain visualization and analysis with Blender rendering"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "numpy<2.0",
    "scipy",
    "scikit-image",
    "scikit-learn", # Required for proximity mask clustering (DBSCAN)
    "opencv-python-headless", # 500x faster bilateral filter than skimage
    "torch", # GPU-accelerated area averaging for downsampling
    "numba", # JIT compilation for performance-critical loops
    "pysheds>=0.4", # Hydrological analysis (flow direction, accumulation)
    "rasterio",
    "geopandas",
    "shapely",
    "matplotlib",
    "seaborn",
    "pandas",
    "requests",
    "tqdm",
    "pyproj",
    "zarr",
    "bpy>=4.0", # Blender Python module for rendering
    "NASADEM", # DEM downloads from NASA Earthdata
    "earthaccess", # NASA Earthdata authentication
    "skan>=0.13.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "pylint",
    "black",
    "mypy",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=4.0",
]
ml = [
    "lightgbm",
]
upscale = [
    "torchvision>=0.15.0",  # Required by basicsr-fixed and realesrgan
    "basicsr-fixed>=1.4.2",  # Fixed version with torchvision 0.17+ compatibility
    "realesrgan>=0.3.0",  # AI super-resolution for score upscaling
]
all = [
    "torchvision",
    "realesrgan",
]

[tool.black]
line-length = 100
target-version = ['py311']
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0103",  # Invalid name
    "C0114",  # Missing module docstring
    "R0913",  # Too many arguments
    "R0914",  # Too many local variables
]

[tool.pylint.format]
max-line-length = 100
